test/errors/type/list/spread.yasl
mt.lookup([], .spread)(1)
